2010-09-13  Andreas Schwab  <schwab@redhat.com>
	    Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (dl_main): Set GLRO(dl_init_all_dirs) just before
	re-relocationg ld.so.
	* elf/dl-support.c (_dl_non_dynamic_init): And here after the
	_dl_init_paths call.
	* elf/dl-load.c (_dl_init_paths).  Don't set GLRO(dl_init_all_dirs)
	here anymore.

2010-09-14  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_init.c (__res_vinit): Count the default server we added.

2010-09-08  Chung-Lin Tang  <cltang@codesourcery.com>
	    Ulrich Drepper  <drepper@redhat.com>

	[BZ #11968]
	* sysdeps/unix/sysv/linux/x86_64/____longjmp_chk.S
	(____longjmp_chk): Use %ebx for saving value across system call.
	Add unwind info.

2010-09-06  Andreas Schwab  <schwab@redhat.com>

	* manual/Makefile: Don't mix pattern rules with normal rules.

2010-09-05  Andreas Schwab  <schwab@linux-m68k.org>

	* debug/vdprintf_chk.c (__vdprintf_chk): Remove undefined
	operation.
	* libio/iofdopen.c (_IO_new_fdopen): Likewise.
	* libio/iofopncook.c (_IO_cookie_init): Likewise.
	* libio/iovdprintf.c (_IO_vdprintf): Likewise.
	* libio/oldiofdopen.c (_IO_old_fdopen): Likewise.
	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela):
	Likewise.

2010-09-04  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11979]
	* iconvdata/gconv-modules: Remove EBCDIC-CP-AR2 alias from
	IBM-930, IBM-933, IBM-935, IBM-937, and IBM-939.

2010-09-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/add_n.S: Update from GMP 5.0.1.
	* sysdeps/x86_64/addmul_1.S: Likewise.
	* sysdeps/x86_64/lshift.S: Likewise.
	* sysdeps/x86_64/mul_1.S: Likewise.
	* sysdeps/x86_64/rshift.S: Likewise.
	* sysdeps/x86_64/sub_n.S: Likewise.
	* sysdeps/x86_64/submul_1.S: Likewise.

2010-09-01  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	This aligns bits/sched.h onto sysdeps/unix/sysv/linux/bits/sched.h:
	Define __sched_param instead of SCHED_* and sched_param when
	<bits/sched.h> is included with __need_schedparam defined.